--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.0.2",
         "diglactic/laravel-breadcrumbs": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jackiedo/cart": "^3.0",
         "laravel/framework": "^9.28.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
-        "orchid/platform": "^13.1"
+        "orchid/platform": "^13.1",
+        "spatie/laravel-sluggable": "^3.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
