--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.10",
         "orchid/platform": "^13.1",
-        "spatie/laravel-sluggable": "^3.4"
+        "spatie/laravel-sluggable": "^3.4",
+        "tucker-eric/eloquentfilter": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
