--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^9.28.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laraveles/spanish": "^1.5",
         "livewire/livewire": "^2.10",
         "orchid/platform": "^13.1",
         "spatie/laravel-sluggable": "^3.4",
