--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "diglactic/laravel-breadcrumbs": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
         "jackiedo/cart": "^3.0",
+        "jantinnerezo/livewire-alert": "^2.2",
         "laravel/framework": "^9.28.0",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
